--- a/resistance.kv
+++ b/resistance.kv
@@ -56,7 +56,7 @@ ResistanceGame:
             id: gameresult_screen
             name: 'GameResultScreen'
             manager: screen_manager
-            resulttext: 'Spies Win' if game.s_wins == 3 else 'Resistance Wins'
+            resulttext: 'Spies\nWin' if game.s_wins == 3 else 'Resistance\nWins'
 
 
 
@@ -83,13 +83,14 @@ ResistanceGame:
     Label:
         halign: 'center'
         valign: 'top'
-        size_hint: (1,.3)
-        pos_hint:  {'center_x':.5, 'top':.6}
+        font_size: 32
+        size_hint: (1,.2)
+        pos_hint:  {'center_x':.5, 'top':.55}
         text: str(root.slider.value) + " players\n" + str(root.r_count) + " Resistance VS " + str(root.s_count) + " Spies\n" + "Mission sizes are " + root.m_counts_str
 
     Slider:
         id: nps
-        pos_hint: {'center_x': .5, 'center_y':.3}
+        pos_hint: {'center_x': .5, 'center_y':.25}
         size_hint: (.5,.2)
         range: (5,10)
         step: 1
@@ -191,7 +192,7 @@ ResistanceGame:
     size_hint: (.2,.2)
     Label:
         color: (0,1,0,1)
-        text: 'Pass'
+        text: 'PASS'
 
 <FailCard>:
     canvas.before:
@@ -204,7 +205,7 @@ ResistanceGame:
     size_hint: (.2,.2)
     Label:
         color: (1,0,0,1)
-        text: 'Fail'
+        text: 'FAIL'
 
 <ResultLabel>:
     font_size: 32
@@ -226,6 +227,7 @@ ResistanceGame:
 
 <GameResultScreen>:
     Label:
+    	halign: 'center'
         pos_hint: {'center_y': .5, 'center_x': .5}
-        font_size: 32
+        font_size: 64
         text: root.resulttext
